RESOLVED FIXED187049
[GStreamer] Do not forget to set stream on track switching
https://bugs.webkit.org/show_bug.cgi?id=187049
Summary [GStreamer] Do not forget to set stream on track switching
Thibault Saunier
Reported 2018-06-26 08:56:53 PDT
Regression from Bug #186678
Attachments
[GStreamer] Do not forget to set stream on track switching (2.11 KB, patch)
2018-06-26 08:58 PDT, Thibault Saunier
pnormand: review+
commit-queue: commit-queue-
[GStreamer] Do not forget to set stream on track switching (2.15 KB, patch)
2018-06-26 09:12 PDT, Thibault Saunier
no flags
Thibault Saunier
Comment 1 2018-06-26 08:58:56 PDT
Created attachment 343606 [details] [GStreamer] Do not forget to set stream on track switching This was an overlooked issue introduced in 186678
WebKit Commit Bot
Comment 2 2018-06-26 09:07:13 PDT
Comment on attachment 343606 [details] [GStreamer] Do not forget to set stream on track switching Rejecting attachment 343606 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 343606, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: https://webkit-queues.webkit.org/results/8347645
Thibault Saunier
Comment 3 2018-06-26 09:12:36 PDT
Created attachment 343608 [details] [GStreamer] Do not forget to set stream on track switching This was an overlooked issue introduced in 186678
WebKit Commit Bot
Comment 4 2018-06-26 09:59:04 PDT
Comment on attachment 343608 [details] [GStreamer] Do not forget to set stream on track switching Clearing flags on attachment: 343608 Committed r233202: <https://trac.webkit.org/changeset/233202>
WebKit Commit Bot
Comment 5 2018-06-26 09:59:06 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-06-26 10:01:23 PDT
Note You need to log in before you can comment on or make changes to this bug.