[GStreamer] Do not forget to set stream on track switching https://bugs.webkit.org/show_bug.cgi?id=187049

Patch by Thibault Saunier <tsaunier@igalia.com> on 2018-06-26
Reviewed by Philippe Normand.

This was an overlooked issue introduced in Bug #186678

This is already tested, but we currently run only tests against playbin2

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::enableTrack):

Canonical link: https://commits.webkit.org/202293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233202 268f45cc-cd09-0410-ab3c-d52691b4dbfc